--- a/style.css
+++ b/style.css
@@ -76,12 +76,15 @@ body * {
   z-index: 1;
   left: 0;
   transform: translateY(-50%);
+  animation: slide-back 0.2s;
 }
 
 .light #switch button{
-  right: 0;
-  left: initial;
+  animation: slide-in 0.4s forwards;
+}
 
+#switch button:hover{
+  outline: 8px solid var(--highlight-color);
 }
 
 #switch span{
@@ -158,4 +161,21 @@ footer{
     .light {
       --bg-url: url(./assets/assets/bg-desktop-light.jpg)
     }
+}
+
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
+  }
 }
